MDEV-10429: sys_vars.sysvars_wsrep fails in buildbot on host 'work' (valgrind builder)

- Fixed the test
- Improved comment for wsrep_drupal_282555_workaround